add unit test to accounts, fields, specializations
